--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^6.0.3",
-    "nodemon": "^2.0.12"
+    "mongoose": "^6.0.3"
   }
 }
